tests/baselines/reference/parserMemberVariableDeclaration3(strict=true).errors.txt
parserMemberVariableDeclaration3.ts(2,10): error TS1029: 'public' modifier must precede 'static' modifier.
parserMemberVariableDeclaration3.ts(2,17): error TS7008: Member 'Foo' implicitly has an 'any' type.


==== parserMemberVariableDeclaration3.ts (2 errors) ====
    class C {
      static public Foo;
             ~~~~~~
!!! error TS1029: 'public' modifier must precede 'static' modifier.
                    ~~~
!!! error TS7008: Member 'Foo' implicitly has an 'any' type.
    }